@@ -46,3 +46,8 @@ continue to carry some risk of some sort.
 Adding Ethereal means you have to weight if you picked enough
 high-value defense to allow playing it and keeping the temp HP over
 between turns, especially early.
+
+Off-Key -> 7(9) effects
+Off-Key- was never worth taking, whereas if you had a camp ahead it was a key pick.
+This should make the base effect a little better even with Riposte existing,
+as well as nerfing the upgrade's huge swing.
